src/human_study/program_45/python_err_msg.txt
File "./seq2parse/human_study/program_45/original.py", line 4
    while total > 85 AND total < 150:
                     ^^^
SyntaxError: invalid syntax
